Fix name not visible on Firefox

--- a/src/components/logo/logo-styles.scss
+++ b/src/components/logo/logo-styles.scss
@@ -66,3 +66,9 @@ _:-ms-lang(x), .logo .triangle {
     stroke-dashoffset: 0;
     opacity: 0.5;
 }
+
+@-moz-document url-prefix() {
+    .logo img {
+        mix-blend-mode: normal;
+    }
+}
